--- a/style/style.scss
+++ b/style/style.scss
@@ -20,6 +20,14 @@ body {
   background: #F2F2F2;
   max-width: 100%;
   overflow-x: hidden;
+
+  &.cart {
+    background-color: white;
+
+    footer {
+      background: #f2f2f2;
+    }
+  }
 }
 
 .container {
@@ -909,4 +917,607 @@ footer {
     }
   }
 
+}
+
+.card-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  z-index: 12;
+  background: white;
+  border-radius: 50px;
+  padding: 60px 40px;
+  width: 100%;
+  max-width: 1360px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .4s ease;
+
+  .card-close {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, -50%);
+  }
+
+  .top {
+    display: flex;
+    gap: 80px;
+  }
+
+  .top-r {
+    max-width: 585px;
+    position: relative;
+    flex-shrink: 0;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .top-l {
+    .heading {
+      font-family: $font-family;
+      font-weight: 500;
+      font-size: 26px;
+      line-height: 100%;
+      color: #2d2d2d;
+      margin-bottom: 25px;
+    }
+
+    .select-item {
+      margin-bottom: 25px;
+      width: 100%;
+      max-width: 320px;
+
+      &.active {
+        .select-list {
+          max-height: 300px;
+          overflow-y: scroll;
+          padding-top: 10px;
+        }
+      }
+
+      .select-heaidng {
+        font-family: $second-family;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 100%;
+        color: #919191;
+        margin-bottom: 15px;
+      }
+
+      .select-input {
+        border: 1px solid #919191;
+        border-radius: 100px;
+        padding: 20px 30px;
+        background: #f2f2f2;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+
+        .select-input-name {
+          font-family: $second-family;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 100%;
+          color: #919191;
+        }
+
+        svg {
+          width: 24px;
+          flex-shrink: 0;
+        }
+      }
+
+      .select-list {
+        max-height: 0px;
+        transition: all .4s ease;
+        overflow: hidden;
+        padding: 0 20px;
+      }
+
+      .select-list__item {
+        border-bottom: 1px solid #f2f2f2;
+        padding: 10px 10px 15px;
+        font-family: $second-family;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 100%;
+        color: #2d2d2d;
+      }
+    }
+
+    .nalichie {
+      .nalichie__heading {
+        font-family: $second-family;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 100%;
+        color: #919191;
+        margin-bottom: 15px;
+      }
+
+      .nalichie__nal {
+        font-family: $second-family;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 100%;
+        color: #2d2d2d;
+      }
+    }
+
+  }
+
+  .price {
+    font-family: $font-family;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 100%;
+    color: #2d2d2d;
+    margin-top: 40px;
+  }
+
+  .top-buttons {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    .count {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .decrement,
+    .increment {
+      border: 1px solid #919191;
+      border-radius: 100px;
+      width: 47px;
+      height: 47px;
+      font-family: $third-family;
+      font-weight: 600;
+      font-size: 28px;
+      line-height: 100%;
+      text-align: center;
+      color: #919191;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .count-num {
+      width: 25px;
+      font-family: $second-family;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 100%;
+      text-align: center;
+      color: #2d2d2d;
+    }
+
+    .add-to-cart {
+      font-family: $font-family;
+      font-weight: 600;
+      font-size: 18px;
+      color: white;
+      border-radius: 100px;
+      padding: 20px 70px;
+      background: #2d2d2d;
+    }
+  }
+
+
+  .btm {
+    border-radius: 15px;
+    padding: 40px;
+    background: #f2f2f2;
+
+    .btm__heading {
+      font-family: $font-family;
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 100%;
+      color: #191919;
+      margin-bottom: 40px;
+    }
+
+    .wrapper {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+
+      .item {
+        img {
+          width: 100%;
+          margin-bottom: 20px;
+        }
+
+        .name {
+          font-family: $second-family;
+          font-weight: 700;
+          font-size: 16px;
+          color: #2d2d2d;
+          margin-bottom: 20px;
+        }
+
+        .price {
+          font-family: $font-family;
+          font-weight: 500;
+          font-size: 26px;
+          line-height: 100%;
+          color: #2d2d2d;
+          margin-top: 0;
+          margin-bottom: 20px;
+        }
+
+        .add-to-cart {
+          border-radius: 100px;
+          padding: 5px 10px;
+          width: 100%;
+          background: #2d2d2d;
+          padding: 20px 0;
+          font-family: $font-family;
+          font-weight: 600;
+          font-size: 18px;
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+.bread-crumbs {
+  background: white;
+  padding-top: 20px;
+  padding-bottom: 60px;
+
+  .container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
+  a,
+  div {
+    font-family: $second-family;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    text-align: center;
+    color: #2d2d2d;
+
+    &.curren {
+      color: #919191;
+    }
+  }
+
+}
+
+.cart-hero {
+  .heading {
+    font-family: $font-family;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 100%;
+    color: #2d2d2d;
+    margin-bottom: 40px;
+  }
+
+  .wrapper {
+    display: flex;
+    gap: 40px;
+  }
+
+  .wrapper-r {
+    max-width: 670px;
+    width: 100%;
+
+    .form-item {
+      .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        label {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          input {
+            opacity: 0;
+            position: absolute;
+            left: -11110px;
+
+            &:checked+.radio-visual {
+              &::after {
+                opacity: 1;
+                visibility: visible;
+              }
+            }
+          }
+
+          .radio-visual {
+            width: 26px;
+            height: 26px;
+            border-radius: 100px;
+            border: 1px solid black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::after {
+              content: '';
+              display: block;
+              width: 17px;
+              height: 17px;
+              border-radius: 100px;
+              background: black;
+              transition: all .4s ease;
+              opacity: 0;
+              visibility: hidden;
+            }
+          }
+
+          .label-heading {
+            font-family: $second-family;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 100%;
+            color: #2d2d2d;
+          }
+        }
+      }
+
+      .card-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 40px;
+
+        input {
+          border-radius: 100px;
+          padding: 20px 30px;
+          width: 100%;
+          background: #f2f2f2;
+        }
+      }
+
+      .form-item__heading {
+        font-family: $font-family;
+        font-weight: 500;
+        font-size: 26px;
+        line-height: 100%;
+        color: #2d2d2d;
+        margin-bottom: 25px;
+
+      }
+
+      .inputs-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap:
+          20px;
+
+        input {
+          border-radius: 100px;
+          padding: 20px 30px;
+          background: #f2f2f2;
+          width: 100%;
+        }
+      }
+
+      .input-wrapper {
+        display: flex;
+        gap: 20px;
+      }
+
+      &.form-adres-dost {
+        display: none;
+
+        &.active {
+          display: block;
+        }
+
+        .map-wiget {
+          border-radius: 20px;
+          padding: 85px 248px;
+          width: 670px;
+          height: 249px;
+          background: lightgray;
+          margin-top: 25px;
+        }
+
+        .input-wrapper {
+          button {
+            font-family: $second-family;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 100%;
+            color: #2d2d2d;
+            background: none;
+
+            &.active {
+              color: #919191;
+            }
+          }
+        }
+      }
+    }
+
+  }
+
+  .form-heading {
+    font-family: $font-family;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 100%;
+    color: #2d2d2d;
+  }
+
+  .form-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .wrapper-l {
+    flex: 1;
+
+    .cart-wrapper {
+      display: flex;
+      flex-direction: column;
+      margin-top: 30px;
+      width: 100%;
+
+      .item {
+        border-bottom: 1px solid #919191;
+        border-top: 1px solid #919191;
+        padding: 20px 0px;
+        display: flex;
+        gap: 40px;
+
+        .info {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+
+        }
+
+        .item__img {
+          width: 100%;
+          max-width: 120px;
+          max-width: 210px;
+          height: auto;
+          object-fit: contain;
+
+        }
+
+        .info__heading {
+          font-family: $second-family;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 100%;
+          color: #2d2d2d;
+          margin-bottom: 20px;
+        }
+
+        .list {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+        }
+
+        .list__item {
+          font-family: $second-family;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 100%;
+          color: #919191;
+        }
+
+        .count {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          margin-top: 20px;
+        }
+
+        .decrement,
+        .increment {
+          border: 1px solid #919191;
+          border-radius: 100px;
+          width: 30px;
+          height: 30px;
+          font-family: $third-family;
+          font-weight: 600;
+          font-size: 28px;
+          line-height: 100%;
+          text-align: center;
+          color: #919191;
+
+        }
+
+        .count__num {
+          font-family: $second-family;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 100%;
+          text-align: center;
+          color: #2d2d2d;
+          min-width: 25px;
+        }
+
+        .itogo-block {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          margin-top: 20px;
+
+          .itog {
+            font-family: $font-family;
+            font-weight: 600;
+            font-size: 18px;
+            color: #2d2d2d;
+          }
+
+          svg {
+            cursor: pointer;
+          }
+        }
+      }
+    }
+
+    .comment {
+      border-radius: 100px;
+      padding: 20px 30px;
+      width: 100%;
+      background: #f2f2f2;
+      font-family: $second-family;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 100%;
+      color: #919191;
+      margin-top: 40px;
+      height: 65px;
+    }
+
+    .itogo {
+      margin-top: 100px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      justify-content: flex-end;
+
+      .itogo-heading,
+      .itogo-num {
+        font-family: $font-family;
+        font-weight: 600;
+        font-size: 18px;
+        color: #2d2d2d;
+      }
+    }
+
+    .submit {
+      margin-top: 40px;
+      border-radius: 100px;
+      padding: 20px 10px;
+      width: 100%;
+      background: #2d2d2d;
+      font-family: $font-family;
+      font-weight: 600;
+      font-size: 18px;
+      color: white;
+    }
+
+  }
 }
