--- a/style/style.scss
+++ b/style/style.scss
@@ -310,10 +310,24 @@ header {
         color: #2d2d2d;
       }
 
+      .item__info {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
       .item__text {
         font-family: $second-family;
         font-weight: 700;
         font-size: 16px;
+        color: #2d2d2d;
+      }
+
+      .item__heaidng {
+        font-family: $second-family;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 100%;
         color: #2d2d2d;
       }
 
@@ -1572,7 +1586,7 @@ footer {
 
     .logo {
       order: 1;
-      max-width: 100px;
+      max-width: 150px;
     }
 
     .header-menu {
@@ -1965,6 +1979,28 @@ footer {
 
     }
 
+  }
+
+  .map {
+    .info {
+      transform: translate(0, 0);
+      top: 15px;
+      left: 15px;
+      width: calc(100% - 30px);
+      padding: 30px 15px;
+
+      .heading {
+        text-align: center;
+      }
+
+      .item {
+        .item__info {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 5px;
+        }
+      }
+    }
   }
 
 }
