--- a/style/style.css
+++ b/style/style.css
@@ -269,10 +269,22 @@ header .header-menu .cart {
   line-height: 100%;
   color: #2d2d2d;
 }
+.map .info .item .item__info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .map .info .item .item__text {
   font-family: "Inter", sans-serif;
   font-weight: 700;
   font-size: 16px;
+  color: #2d2d2d;
+}
+.map .info .item .item__heaidng {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
   color: #2d2d2d;
 }
 .map .info .list {
@@ -1342,7 +1354,7 @@ footer .btm a {
   }
   header .logo {
     order: 1;
-    max-width: 100px;
+    max-width: 150px;
   }
   header .header-menu {
     order: 2;
@@ -1680,6 +1692,21 @@ footer .btm a {
   }
   .cart-hero .wrapper-r .form-item.form-adres-dost .input-wrapper {
     flex-direction: column;
+  }
+  .map .info {
+    transform: translate(0, 0);
+    top: 15px;
+    left: 15px;
+    width: calc(100% - 30px);
+    padding: 30px 15px;
+  }
+  .map .info .heading {
+    text-align: center;
+  }
+  .map .info .item .item__info {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
   }
 }
 
