--- a/style/style.css
+++ b/style/style.css
@@ -1351,6 +1351,7 @@ footer .btm a {
   }
   header .container {
     flex-wrap: wrap;
+        align-items: flex-end;
   }
   header .logo {
     order: 1;
@@ -1695,7 +1696,7 @@ footer .btm a {
   }
   .map .info {
     transform: translate(0, 0);
-    top: 15px;
+    top: 65px;
     left: 15px;
     width: calc(100% - 30px);
     padding: 30px 15px;
